changed request payload to using body

--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,8 @@ task wrapper(type: Wrapper) {
 
 dependencies {
     compile 'io.dropwizard:dropwizard-core:0.9.2'
+    compile 'junit:junit:4.12'
+    compile 'com.googlecode.json-simple:json-simple:1.1'
 }
 
 sourceSets {
