--- a/.classpath
+++ b/.classpath
@@ -82,5 +82,8 @@
 	<classpathentry kind="lib" path="build/distributions/server-test/server-test/lib/snakeyaml-1.15.jar"/>
 	<classpathentry kind="lib" path="build/distributions/server-test/server-test/lib/test-server-1.0.0.jar"/>
 	<classpathentry kind="lib" path="build/distributions/server-test/server-test/lib/validation-api-1.1.0.Final.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Jonathan Chen/git/server-test/build/distributions/server-test/lib/junit-4.12.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Jonathan Chen/git/server-test/build/distributions/server-test/lib/hamcrest-core-1.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Jonathan Chen/git/server-test/build/distributions/server-test/lib/json-simple-1.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
