--- a/build.gradle
+++ b/build.gradle
@@ -30,30 +30,19 @@ task wrapper(type: Wrapper) {
 
 dependencies {
     compile 'io.dropwizard:dropwizard-core:0.9.2'
-    testCompile 'junit:junit:4.12'
+    compile 'junit:junit:4.12'
     compile 'com.googlecode.json-simple:json-simple:1.1'
 }
 
 sourceSets {
     main {
         java {
-            srcDir 'src/java'
+            srcDir 'src/main/java'
         }
         resources {
-            srcDir 'src/resources'
+            srcDir 'src/main/resources'
         }
     }
-}
-
-test {
-   include 'src/java/test/IntegrationTestSuite.class'
-   
-   // show standard out and standard error of the test JVM(s) on the console
-  	testLogging.showStandardStreams = true
-  	reports {
-        junitXml.enabled = false
-        html.enabled = true
-    }         
 }
 
 jar {
@@ -65,7 +54,7 @@ jar {
 }
 
 task copyResources(type: Copy) {
-	from "${projectDir}/src/java/server/config"
+	from "${projectDir}/src/main/java/server/config"
 	into "${buildDir}/config"
 }
 processResources.dependsOn copyResources
